<resources>
    <string name="app_name">Dicoding Story</string>
    <string name="signup">Daftar</string>
    <string name="login">Masuk</string>
    <string name="message_welcome_page">Selamat Datang di Dicoding Story, Selamat Membaca Cerita-Cerita Peserta Dicoding</string>
    <string name="title_welcome_page">Selamat datang di Dicoding Story!</string>
    <string name="title_signup_page">Lengkapi data dirimu di bawah ini ya</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="message_login_page">Masukkan dulu datamu ya</string>
    <string name="title_login_page">Sudah siap untuk membaca cerita?</string>
    <string name="name">Nama</string>
    <string name="message_main_page">Selamat Membaca di Dicoding Story.</string>
    <string name="greeting">Halo %1$s,</string>
    <string name="logout">Keluar</string>
    <string name="password_error">Password tidak bolek kurang dari 8 karakter</string>
    <string name="email_error">Email tidak valid</string>
    <string name="username">Username</string>
    <string name="date">Date</string>
    <string name="description">Description</string>
    <string name="title_detail">Detail Story</string>
    <string name="storyimage">storyImage</string>
    <string name="new_story">Add Story</string>
    <string name="photo">Photo\n</string>
    <string name="gallery">Gallery</string>
    <string name="camera">Camera</string>
    <string name="upload">Upload</string>
    <string name="empty_image_warning">Image belum ditambahkan</string>

</resources>