<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".view.detail.DetailActivity">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/black"
        app:title="@string/title_detail"
        app:titleTextColor="@color/white" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:padding="16dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/border"
            android:layout_margin="16dp"
            android:padding="16dp">

            <ImageView
                android:id="@+id/rv_story"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/storyimage"
                tools:srcCompat="@tools:sample/avatars"
                app:layout_constraintTop_toTopOf="parent"
                android:transitionName="image"
                android:scaleType="fitCenter" />

            <TextView
                android:id="@+id/rv_user"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@drawable/border"
                android:padding="16dp"
                android:layout_marginTop="8dp"
                android:textSize="24sp"
                android:textStyle="bold"
                android:transitionName="text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/rv_story"
                tools:text="@string/username" />

            <TextView
                android:id="@+id/rv_description"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@drawable/border"
                android:justificationMode="inter_word"
                android:padding="16dp"
                android:layout_marginTop="8dp"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/rv_user"
                tools:text="@string/description" />

            <TextView
                android:id="@+id/rv_date"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@drawable/border"
                android:gravity="end"
                android:padding="16dp"
                android:layout_marginTop="8dp"
                android:textSize="16sp"
                android:textStyle="italic"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/rv_description"
                tools:text="@string/date" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</LinearLayout>
