<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.newstory.NewStoryActivity">

    <com.google.android.material.progressindicator.LinearProgressIndicator
        android:id="@+id/progressbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/rv_image"
        android:contentDescription="@string/photo"
        app:layout_constraintBottom_toTopOf="@+id/rv_gallery"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_width="0dp"
        android:layout_height="400dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="8dp"
        android:background="@drawable/border"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/baseline_add_24" />

    <Button
        android:id="@+id/rv_gallery"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:text="@string/gallery"
        app:layout_constraintBottom_toTopOf="@+id/rv_description"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@color/black"
        app:layout_constraintTop_toBottomOf="@+id/rv_image" />

    <Button
        android:id="@+id/rv_camera"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/rv_description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/rv_gallery"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@color/black"
        android:text="@string/camera"
        app:layout_constraintTop_toBottomOf="@+id/rv_image" />

    <EditText
        android:id="@+id/rv_description"
        app:layout_constraintBottom_toTopOf="@+id/rv_addbutton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="16dp"
        android:layout_width="0dp"
        android:layout_height="150dp"
        android:autofillHints="hello, this is my story!"
        android:background="@drawable/edit_background"
        android:gravity="start|top"
        android:hint="@string/description"
        android:padding="16dp"
        app:layout_constraintTop_toBottomOf="@+id/rv_gallery" />

    <Button
        android:id="@+id/rv_addbutton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/upload"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@color/black"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>